# Yawnocs-Log

./: .gitignore  main.py  pyproject.toml
src/yawnoc/: __init__.py  forward.py  utils.py
src/yawnoc/deep_solver/: __init__.py  dataset.py  model.py  solver_module.py  train.py  utils.py
src/yawnoc/deep_solver/configs/: train.yaml  train_estimator.yaml  train_solver.yaml
src/yawnoc/deep_solver/configs/dataloader/: default_test.yaml  default_train.yaml
src/yawnoc/deep_solver/configs/dataset/: default_test.yaml  default_train.yaml
src/yawnoc/deep_solver/configs/lit_model/: lit_estimator.yaml  lit_solver.yaml
src/yawnoc/deep_solver/configs/trainer/: default_trainer.yaml
src/yawnoc/deep_solver/weights/: deep_estimator_5x5_epoch=999-step=1000.yaml  epoch=999-step=1000.ckpt
src/yawnoc/solvers/: brute_force_search.py  deep_solver.py  gradient_descent.py  pattern_search.py  solver_factory.py
tests/: test_forward.py
