[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yawnoc"
version = "0.0"

dependencies = [
    "opencv-python",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
# also install torch itself
# pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124

nn = [
    "lightning",
    "hydra-core",
    "tensorboard",
]